--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
   </head>
   <body>
-  <script src=""></script>
+    <script src="js/phaser.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
