--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Learn Game Development at Zenva.com</title>
-    
+    <style>
+      canvas {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <script src="js/phaser.js"></script>
